--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
@@ -61,7 +61,7 @@
 
             <div class="info-box info-box--grey">
                 <h2 class="info-box__heading"><?php echo $this->translate('permits.irhp-application.status.question'); ?></h2>
-                <p class="info-box__icon-wrapper"><i class="info-box__icon selfserve-important"></i><?php echo $this->escapeHtml($application['status']['description']); ?></p>
+                <p class="info-box__icon-wrapper"><i class="info-box__icon selfserve-important"></i><?php echo $this->escapeHtml($this->translate($application['status']['description'])); ?></p>
                 <?php
                 if ($application['canBeCancelled']) {
                     ?>
