--- a/app/internal/module/Admin/view/pages/editable-translations/translation-key-details.phtml
+++ b/app/internal/module/Admin/view/pages/editable-translations/translation-key-details.phtml
@@ -15,7 +15,7 @@ $translationsTable = $this->placeholder('translationsTable')->getValue();
     <?php echo $locationsTable ?>
 </div>
 <div class="govuk-details">
-    <a class="action--tertiary" href="<?php echo $this->url('admin-dashboard/admin-editable-translations', ['action' => 'search']); ?>">
+    <a class="action--tertiary" href="<?php echo $this->url('admin-dashboard/admin-editable-translations', ['action' => 'index']); ?>">
         <button  name="filter" class="action--tertiary" id="filter" value="">New search</button>
     </a>
 </div>
