--- a/app/selfserve/module/Permits/view/permits/permits/index.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/index.phtml
@@ -1,6 +1,6 @@
 <?php
 
-use Permits\View\Helper\EcmtSection;
+use Permits\View\Helper\IrhpApplicationSection;
 
 $translator = $this->getHelperPluginManager()->getServiceLocator()->get('Helper\Translation');
 ?>
@@ -37,7 +37,7 @@ $translator = $this->getHelperPluginManager()->getServiceLocator()->get('Helper\
             <?php else: ?>
                 <?php echo $translator->translateReplace('markup-ecmt-permit-guidance', ['open']); ?>
             <?php endif; ?>
-            <a href="<?php echo $this->url(EcmtSection::ROUTE_TYPE, [], [], true); ?>" role="button" draggable="false" class="govuk-button govuk-!-margin-top-8">
+            <a href="<?php echo $this->url(IrhpApplicationSection::ROUTE_TYPE, [], [], true); ?>" role="button" draggable="false" class="govuk-button govuk-!-margin-top-8">
                 <?php echo $this->translate('permits.application.overview.button'); ?>
             </a>
         <?php else : ?>
