VOL-808-809: Accessibility Statement

--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -231,6 +231,9 @@
           <li class="global-footer__link">
             <a href="<?php echo $this->url('privacy-notice');?>"><?php echo $this->translate('privacy-notice-title') ?></a>
           </li>
+            <li class="global-footer__link">
+                <a href="<?php echo $this->url('accessibility-statement');?>"><?php echo $this->translate('accessibility-statement-footer-title') ?></a>
+            </li>
           <li class="global-footer__link">
             <?php echo $this->languageLink(); ?>
           </li>
