--- a/app/selfserve/module/Olcs/view/partials/additional-guidance-component.phtml
+++ b/app/selfserve/module/Olcs/view/partials/additional-guidance-component.phtml
@@ -1,19 +1,12 @@
-<p class="govuk-body">
-    <?php
-    if (!is_array($this->additionalGuidance)) {
-        echo $this->escapeHtml($this->translate($this->additionalGuidance));
+<?php
+if (!is_array($this->additionalGuidance)) {
+    printf('<p class="govuk-body">%s</p>', $this->escapeHtml($this->translate($this->additionalGuidance)));
+} else {
+    if (isset($this->additionalGuidance['disableHtmlEscape']) && ($this->additionalGuidance['disableHtmlEscape'] === true)) {
+        echo $this->translate($this->additionalGuidance['value']);
     } else {
-        if (isset($this->additionalGuidance['disableHtmlEscape']) && ($this->additionalGuidance['disableHtmlEscape'] === true)) {
-            echo $this->translate($this->additionalGuidance['value']);
-        } else {
-            foreach ($this->additionalGuidance as $key => $line) {
-                echo $this->escapeHtml($this->translate($line));
-
-                if ($key !== (count($this->additionalGuidance) - 1)) {
-                    echo '<br /><br />';
-                }
-            }
+        foreach ($this->additionalGuidance as $key => $line) {
+            printf('<p class="govuk-body">%s</p>', $this->escapeHtml($this->translate($line)));
         }
     }
-    ?>
-</p>
+}
