--- a/app/internal/module/Admin/view/pages/editable-translations/results-table.phtml
+++ b/app/internal/module/Admin/view/pages/editable-translations/results-table.phtml
@@ -1,6 +1,7 @@
-<h4 class="title">Editable Translations</h4>
+<h4 class="title"><?php echo $this->placeholder('resultsTableTitle')->getValue() ?></h4>
 <div class="card">
     <form id="translationSearchForm">
+        <input type="hidden" id="jsonBaseUrl" value="<?php echo $this->placeholder('jsonBaseUrl')->getValue() ?>">
         <input type="text" id="translationSearch" class="search__input" style="width: 450px;" placeholder="Search (type then pause for autocomplete)" autocomplete="off">
         <input type="submit" id="searchBtn" name="submit" class="search__button" value="">
     </form>
