--- a/app/selfserve/module/Olcs/view/partials/details-component.phtml
+++ b/app/selfserve/module/Olcs/view/partials/details-component.phtml
@@ -1,10 +1,10 @@
-<details class="govuk-details" data-module="govuk-details">
+<details class="govuk-details" data-module="govuk-details" aria-controls="details-content">
     <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
             <?php echo $this->escapeHtml($this->translate($this->details['title'])); ?>
         </span>
     </summary>
-    <div class="govuk-details__text">
+    <div class="govuk-details__text" id="details-content">
         <?php echo $this->escapeHtml($this->translate($this->details['content'])); ?>
     </div>
 </details>
