--- a/app/selfserve/module/Permits/view/permits/permits/irhp-awaiting-fee.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-awaiting-fee.phtml
@@ -22,7 +22,22 @@
             }
         ?>
         <h3><?php echo $this->escapeHtml($this->translate('permits.page.irhp.awaiting-fee.fee-summary')); ?></h3>
-        <?php echo $this->partial('partials/summary-list', ['data' => $data[IrhpApplication::DATA_KEY]['mappedFeeData']]); ?>
+        <?php
+            echo $this->partial('partials/summary-list', ['data' => $data[IrhpApplication::DATA_KEY]['mappedFeeData']]);
+
+            if ($data['application']['canViewCandidatePermits']) {
+                echo $this->partial(
+                    'partials/warning-component',
+                    [
+                        'translationKey' => $this->translateReplace(
+                            'permits.page.irhp.awaiting-fee.before-continuing-candidate-warning',
+                            [$this->url(IrhpApplicationSection::ROUTE_UNPAID_PERMITS, [], [], true)]
+                        ),
+                        'disableHtmlEscape' => true
+                    ]
+                );
+            }
+        ?>
         <?php echo $this->form($form); ?>
         <p><?php echo $this->permitsBackLink('permits.link.cancel.return.to.dashboard', IrhpApplicationSection::ROUTE_PERMITS); ?></p>
     </div>
