--- a/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
@@ -15,7 +15,9 @@
         ?>
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <p class="govuk-body"><?php echo $this->translate($this->content); ?></p>
+                <?php if (!empty($this->content)): ?>
+                    <p class="govuk-body"><?php echo $this->translate($this->content); ?></p>
+                <?php endif; ?>
                 <?php if ($this->note): ?>
                     <div class="govuk-inset-text">
                         <?php echo $this->translate($this->note); ?>
