--- a/app/selfserve/module/Permits/view/permits/permits/irhp-unpaid-permits.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-unpaid-permits.phtml
@@ -2,7 +2,7 @@
 use Permits\Controller\Config\DataSource\IrhpApplication as IrhpAppDataSource;
 use Permits\View\Helper\IrhpApplicationSection;
 ?>
-<?php echo $this->permitsBackLink('common.link.back.label', 'permits'); ?>
+<?php echo $this->permitsBackLink('common.link.back.label', $data['backUri']); ?>
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <span class="govuk-caption-xl">
@@ -12,8 +12,20 @@ use Permits\View\Helper\IrhpApplicationSection;
             <?php echo $this->escapeHtml($data[IrhpAppDataSource::DATA_KEY]['applicationRef']); ?>
         </span>
         <h1 class="govuk-heading-xl">
-            <?php echo $this->escapeHtml($data['title']); ?>
+            <?php echo $this->escapeHtml($this->translate($data['title'])); ?>
         </h1>
+
+        <p class="govuk-body">
+            <?php echo $this->escapeHtml(
+                $this->translateReplace(
+                    'permits.irhp.unpaid.permits.summary',
+                    [
+                        $data[IrhpAppDataSource::DATA_KEY]['irhpPermitType']['name']['description'],
+                        $data[IrhpAppDataSource::DATA_KEY]['irhpPermitApplications'][0]['irhpPermitWindow']['irhpPermitStock']['validityYear'],
+                    ]
+                )
+            ); ?>
+        </p>
         <?php
 
         if ($data[IrhpAppDataSource::DATA_KEY]['irhpPermitType']['isEcmtShortTerm']) {
@@ -25,7 +37,7 @@ use Permits\View\Helper\IrhpApplicationSection;
         echo $tables['unpaid-irhp-permits'];
 
         ?>
-        <p>
+        <p class="govuk-!-margin-top-4">
         <a href="<?php echo $this->url(IrhpApplicationSection::ROUTE_AWAITING_FEE, [], [], true) ?>" class="return-overview">
             <?php echo $this->translate('permits.link.return.to.fee.overview'); ?>
         </a>
