--- a/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
@@ -14,7 +14,7 @@
         );
         ?>
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-column-full">
                 <?php if (!empty($this->content)): ?>
                     <p class="govuk-body"><?php echo $this->translate($this->content); ?></p>
                 <?php endif; ?>
