VOL-139: Add search to new vehicle remove page

--- a/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
@@ -15,6 +15,15 @@
         ?>
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
+                <?php if (isset($this->form)) {
+                    $this->form->prepare();
+                    echo $this->formErrors($this->form);
+                }
+                if (isset($this->searchForm)) {
+                    $this->searchForm->prepare();
+                    echo $this->formErrors($this->searchForm);
+                }
+                ?>
                 <?php if (!empty($this->content)): ?>
                     <p class="govuk-body"><?php echo $this->translate($this->content); ?></p>
                 <?php endif; ?>
@@ -22,14 +31,23 @@
                     <p class="govuk-body-l govuk-!-margin-top-3"><?php echo $this->translate('licence.vehicle.remove.confirm.selected-vehicles'); ?></p>
                     <ul role="list" class="govuk-list govuk-list--bullet govuk-body-l two-column">
                         <?php
-                            $count = 0;
+                        $count = 0;
                         ?>
                         <?php foreach ($this->vrmList as $vrm): ?>
                             <?php $count++; ?>
-                            <li><span aria-label="<?php echo $this->translateReplace('licence.vehicle.remove.confirm.selected-vehicles.list.item.aria', [$count, $vrm]); ?>"><?php echo $vrm; ?></span></li>
+                            <li>
+                                <span aria-label="<?php echo $this->translateReplace('licence.vehicle.remove.confirm.selected-vehicles.list.item.aria',
+                                    [$count, $vrm]); ?>"><?php echo $vrm; ?></span></li>
                         <?php endforeach; ?>
                     </ul>
                     <div class="govuk-clearfix"></div>
+                <?php endif; ?>
+                <?php if (isset($this->searchForm)): ?>
+                    <?php
+                    echo $this->form($this->searchForm);
+                    ?>
+                    <p><a href="<?php echo $this->clearUrl; ?>" class="govuk-link">Clear search</a></p>
+                    <div class="govuk-phase-banner govuk-!-margin-bottom-8 govuk-!-margin-top-0"></div>
                 <?php endif; ?>
                 <?php if ($this->note): ?>
                     <div class="govuk-inset-text">
@@ -38,8 +56,6 @@
                 <?php endif; ?>
                 <?php if (isset($this->form)): ?>
                     <?php
-                    $this->form->prepare();
-                    echo $this->formErrors($this->form);
                     echo $this->form($this->form);
                     ?>
                 <?php endif; ?>
