OLCS-27823 - trans key special chr fixes

--- a/app/selfserve/module/Olcs/view/olcs/bus-registration/partial/details-content.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/bus-registration/partial/details-content.phtml
@@ -99,7 +99,7 @@
                 ],
                 7 => [
                     [
-                        'label' => 'Supported by subsidies?',
+                        'label' => 'supported-by-subsidies',
                         'type' => 'yesno',
                         'value' => $this->registrationDetails['subsidised']['description']
                     ]
