--- a/app/selfserve/module/Olcs/view/pages/application-summary.phtml
+++ b/app/selfserve/module/Olcs/view/pages/application-summary.phtml
@@ -34,10 +34,10 @@
       <?php endif; ?>
       <div class="article">
         <?php if (empty($actions) || $hideContent): ?>
-            <h2><?php echo $this->translate('What happens next?'); ?></h2>
+            <h2><?php echo $this->translate('what-happens-next'); ?></h2>
             <p><?php echo $this->translate('application-summary-complete-what-next-text'); ?></p>
         <?php else: ?>
-            <h2><?php echo $this->translate('What do I need to do next?'); ?></h2>
+            <h2><?php echo $this->translate('what-do-i-need-to-do-next'); ?></h2>
         <?php endif; ?>
       </div>
       <div class="article">
