--- a/app/selfserve/module/Permits/view/permits/permits/essential-information.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/essential-information.phtml
@@ -8,7 +8,7 @@
                 <h1 class="govuk-heading-xl govuk-!-margin-bottom-3"><?php echo $this->escapeHtml($this->translate('permits.page.bilateral.countries.essential.heading')); ?></h1>
             </legend>
             <?php echo $this->translate('markup-irhp-essential-information-' . $countryCode); ?>
-            <div class="form-steps">
+            <div class="form-steps govuk-!-margin-top-6">
                 <p>
                     <a class="button govuk-button" role="button" href="<?php echo $this->url($data['continueUri'], [], [], true); ?>">
                         <?php echo $this->escapeHtml($this->translate($data['continueUriLabel'])); ?>
