--- a/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
@@ -8,7 +8,7 @@
 ?>
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-two-thirds js-body">
         <?php echo $this->formErrors($form); ?>
         <?php if (isset($data['application']['applicationRef'])) { ?>
             <span class="govuk-caption-xl">
