--- a/app/internal/module/Olcs/view/sections/irhp-permit/partials/right.phtml
+++ b/app/internal/module/Olcs/view/sections/irhp-permit/partials/right.phtml
@@ -59,7 +59,7 @@ $nav = $this->navigation('right-sidebar')
 <?php if (!empty($note) && !$this->isGranted(Common\RefData::PERMISSION_INTERNAL_LIMITED_READ_ONLY)): ?>
     <div class="latest-note">
         <div class="latest-note__<?php echo ($isPriorityNote ? "priority" : "details"); ?>">
-            <?php echo substr($note, 0, 100); ?>
+            <?php echo $this->escapeHtml(substr($note, 0, 100)); ?>
         </div>
         <a class="latest-note__link" href="<?php echo $this->url('licence/irhp-application-processing/notes', ['licence' => $irhpPermit['licence']['id'], 'irhpAppId' => $irhpPermit['id']]); ?>">View all notes</a>
     </div>
