--- a/app/internal/module/Olcs/view/sections/licence/partials/right.phtml
+++ b/app/internal/module/Olcs/view/sections/licence/partials/right.phtml
@@ -45,7 +45,7 @@ if ($nav->getContainer()->hasPages(true)): ?>
 <?php if (!empty($note) && !$this->isGranted(Common\RefData::PERMISSION_INTERNAL_LIMITED_READ_ONLY)): ?>
     <div class="latest-note">
         <div class="latest-note__<?php echo ($isPriorityNote ? "priority" : "details"); ?>">
-            <?php echo substr($note, 0, 100); ?>
+            <?php echo $this->escapeHtml(substr($note, 0, 100)); ?>
         </div>
         <a class="latest-note__link" href="<?php echo $this->url('licence/processing/notes', ['licence' => $licence['id']]); ?>">View all notes</a>
     </div>
