--- a/app/internal/module/Olcs/view/sections/transport-manager/partials/right.phtml
+++ b/app/internal/module/Olcs/view/sections/transport-manager/partials/right.phtml
@@ -19,7 +19,7 @@ if ($nav->getContainer()->hasPages()) {
 ?>
 <?php if (!empty($note) && !$this->isGranted(Common\RefData::PERMISSION_INTERNAL_LIMITED_READ_ONLY)):?>
     <div class="latest-note">
-        <div class="latest-note__details"><?php echo substr($note, 0, 100); ?></div>
+        <div class="latest-note__details"><?php echo $this->escapeHtml(substr($note, 0, 100)); ?></div>
         <a
             class="latest-note__link"
             href="<?php echo $this->url(
