OLCS-25956 ss add intelligence to back links up to licence selection page

--- a/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
@@ -1,6 +1,6 @@
 <?php
     echo $this->permitsBackLink(
-        'common.link.back.label',
+        isset($data['backLabel']) ? $data['backLabel'] : 'common.link.back.label',
         isset($data['backUri']) ? $data['backUri'] : '',
         isset($data['backUriParams']) ? $data['backUriParams'] : [],
         isset($data['backUriOptions']) ? $data['backUriOptions'] : []
